--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json -o",
     "build": "ng build --prod",
-    "test": "ng test --code-coverage",
+    "test": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -34,7 +34,7 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.14.37",
     "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.7.1",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~6.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
