--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,15 @@
       "@producto/*": [
         "src/app/feature/producto/*"
       ],
+      "@motocicleta/*": [
+        "src/app/feature/motocicleta/*"
+      ],
+      "@alquiler/*": [
+        "src/app/feature/alquiler/*"
+      ],
+      "@factura/*": [
+        "src/app/feature/factura/*"
+      ],
       "@shared/*": [
         "src/app/shared/*"
       ]
